--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,9 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      # Runs a set of commands using the runners shell
+      - name: Create test file
+        run: |
+          echo Add other actions to build > /tmp/node001runner.txt,
+          echo test, and deploy your project.  >> /tmp/node001runner.txt
