--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     # runs-on: ubuntu-latest
-    runs-on: wiz4host-runner-adsk-node001
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
